# IsoSLAM

./: .git-blame-ignore-revs  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .pylintrc  .readthedocs.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  README.txt  TODO.md  index.html  mkdocs.yml  objects.inv  pipeline_slam_3UIs.py  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: add-issue-to-project.yaml  build_mkdocs.yaml  mkdocs-deploy.yaml  pypi.yaml  sphinx_docs_to_gh_pages.yaml  test-pypi.yaml  tests.yaml
api/: index.html  io.md~  isoslam.md~  logging.md~  processing.md~  summary.md~  utils.md~
api/io/: index.html
api/isoslam/: index.html
api/logging/: index.html
api/plotting/: index.html
api/processing/: index.html
api/summary/: index.html
api/utils/: index.html
contributing/: index.html
contributing/adding_modules/: index.html
contributing/profiling/: index.html
docs/: api.md  contributing.md  extending.md  index.md  installation.md  introduction.md  links.md  usage.md  workflow.md
docs/api/: index.md  io.md  isoslam.md  logging.md  plotting.md  processing.md  summary.md  utils.md
docs/contributing/: adding_modules.md  index.md  profiling.md
docs/source/: conf.py  contributing.md  index.rst  installation.md  introduction.md  workflow.md
extending/: index.html
installation/: index.html
introduction/: index.html
isoslam/: __init__.py  all_introns_counts_and_info.py  default_config.yaml  io.py  isoslam.py  logging.py  pipeline_slam_3UIs.py  plotting.py  processing.py  summary.py  utils.py  validation.py
isoslam/pipeline_slam_3UIs/: all_introns_counts_and_info.py  pipeline.yml  summarize_counts.R
links/: index.html
main/: .buildinfo  contributing.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html  workflow.html
main/.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  usage.doctree  workflow.doctree
main/.doctrees/autoapi/: index.doctree
main/_sources/: installation.md.txt  usage.md.txt  workflow.md.txt
main/_static/: documentation_options.js
main/autoapi/: index.html
main/autoapi/conf/: index.html
pipeline_slam_3UIs/: 3UI_spliced_counts_and_info.py  all_introns_counts_and_info.py  conversions_per_pair.py  conversions_per_read.py  dapars_default_config.txt  dapars_design.tsv  gene_level_counts_and_info.py  get_interaction_over_time_pvals.R  get_over_time_pvalues.R  get_over_time_pvalues_gene_level.R  get_pair_halflives.R  get_pair_pvalues.R  get_pair_pvalues_all_events.R  pipeline.yml  plot_conversions_per_pair.R  plot_conversions_per_read.R  retrieve_3UI_reads.py  split_labelled_vs_unlabelled.py  stranded_conversions_per_pair.py  stranded_conversions_per_pair_no_snp.py
search/: search_index.json
tests/: conftest.py  test_all_introns_counts_and_info.py  test_io.py  test_isoslam.py  test_pipeline_slam_3UIs.py  test_processing.py  test_summary.py  test_utils.py  test_validation.py
tests/_regtest_outputs/: test_all_introns_counts_and_info.test_main[file_1].out  test_all_introns_counts_and_info.test_main[file_2].out  test_processing.test_process[0hr1].out  test_processing.test_process[no4sU].out  test_summary.test_aggregate_conversions[missing_conversion_True_for_transcript_id_on_chr_3].out  test_summary.test_aggregate_conversions[real_data].out  test_summary.test_average_replicates[real_data_mean].out  test_summary.test_average_replicates[real_data_median].out  test_summary.test_average_replicates[simple_mean].out  test_summary.test_average_replicates[simple_median].out  test_summary.test_derive_weight_within_isoform[real_data].out  test_summary.test_derive_weight_within_isoform[simple].out  test_summary.test_extract_hour_and_replicate[realistic].out  test_summary.test_extract_hour_and_replicate[simple].out  test_summary.test_filter_no_conversions[missing_conversion_True_for_transcript_id_on_chr_3].out  test_summary.test_filter_no_conversions[real_data].out  test_summary.test_find_read_pairs[real].out  test_summary.test_find_read_pairs[simple].out  test_summary.test_get_one_or_more_conversion[real_data_groupby_none].out  test_summary.test_merge_average_baseline[real].out  test_summary.test_merge_average_baseline[real_remove_zero_baseline].out  test_summary.test_merge_average_baseline[simple].out  test_summary.test_normalise[real].out  test_summary.test_normalise[simple].out  test_summary.test_percent_conversions_across_replicates[simple_mean].out  test_summary.test_remove_zero_baseline[real_(no_params)].out  test_summary.test_remove_zero_baseline[simple].out  test_summary.test_select_base_levels[real].out  test_summary.test_select_base_levels[simple].out  test_summary.test_summary_counts[parquet].out  test_summary.test_summary_counts[tsv].out
tests/resources/: test.yaml
tests/resources/bam/: d0_0hr1_filtered_remapped_sorted.bam  d0_no4sU_filtered_remapped_sorted.bam  d0_no4sU_filtered_remapped_sorted.bam.bai
tests/resources/bed6/: test_coding_introns.bed
tests/resources/fasta/: hg38_noalt_filtered.fa  (+1 more)
tmp/pair_pvalue/: get_pair_pvalues.R
usage/: index.html
workflow/: index.html
(+120 files in other folders)
